--- a/test.html
+++ b/test.html
@@ -89,7 +89,7 @@
 <body>
 <!--更改为你女朋友的头像-->
 <div class="cs">
-    <img src="https://b-ssl.duitang.com/uploads/item/201603/16/20160316225801_mwR2T.jpeg" height="134" width="134" id="logo">
+    <img src="static/jpp.jpeg" height="134" width="134" id="logo">
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
