remove the loop of music

--- a/test.html
+++ b/test.html
@@ -123,7 +123,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("3|2|1|蕊蕊|情人节快乐|每天都要快乐|喜欢你每一天|#time");
+            S.UI.simulate("3|2|1|蕊蕊|情人节快乐|每天都要快乐|喜欢你|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
@@ -576,7 +576,7 @@
     }());
     S.init();
 </script>
-<audio autoplay="autoplay" loop="loop">
+<audio autoplay="autoplay" >
     <source src="http://other.web.np01.sycdn.kuwo.cn/resource/n1/17/87/1393465428.mp3" type="audio/mpeg">
 </audio>
 </body>
