--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>给我亲爱的蕊蕊</title>
+    <title>test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!--<meta itemprop="image" content="./images/fenxiang.png" />-->
@@ -100,7 +100,7 @@
 <script language="javascript">
     function show_date_time() {
         window.setTimeout("show_date_time()", 1000);
-        BirthDay = new Date("1/27/2019 00:00:00");//这个日期是可以修改的
+        BirthDay = new Date("1/1/2000 00:00:00");//这个日期是可以修改的
         today = new Date();
         timeold = (today.getTime() - BirthDay.getTime());
         sectimeold = timeold / 1000
@@ -123,7 +123,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("3|2|1|蕊蕊|情人节快乐|每天都要快乐|喜欢你|#time");
+            S.UI.simulate("|just|have|a|try|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
@@ -576,8 +576,10 @@
     }());
     S.init();
 </script>
+<!--
 <audio autoplay="autoplay" >
     <source src="http://other.web.np01.sycdn.kuwo.cn/resource/n1/17/87/1393465428.mp3" type="audio/mpeg">
 </audio>
+-->
 </body>
 </html>
