--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <!--<meta itemprop="image" content="./images/fenxiang.png" />-->
+   
     <style>
         html {
             height: 100%;
@@ -87,20 +87,20 @@
 </head>
 
 <body>
-<!--更改为你女朋友的头像-->
+<!--更改为你女朋友的头像 https://cfxtby.github.io/show/static/huangren.jpg-->
 <div class="cs">
-    <img src="https://cfxtby.github.io/show/static/jpp.jpeg" height="134" width="134" id="logo">
+    <img src="static/huangren.jpg" height="134" width="134" id="logo">
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
-    We fell in love
+    喜欢慧慧
     <br/>
     <span id="span_dt_dt"></span>
 </p>
 <script language="javascript">
     function show_date_time() {
         window.setTimeout("show_date_time()", 1000);
-        BirthDay = new Date("1/1/2000 00:00:00");//这个日期是可以修改的
+        BirthDay = new Date("5/1/2019 00:00:00");//这个日期是可以修改的
         today = new Date();
         timeold = (today.getTime() - BirthDay.getTime());
         sectimeold = timeold / 1000
@@ -123,7 +123,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
 			//想说的话
-            S.UI.simulate("|just|have|a|try|#time");
+            S.UI.simulate("|I|like|you|forever|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
@@ -576,10 +576,6 @@
     }());
     S.init();
 </script>
-<!--
-<audio autoplay="autoplay" >
-    <source src="http://other.web.np01.sycdn.kuwo.cn/resource/n1/17/87/1393465428.mp3" type="audio/mpeg">
-</audio>
--->
+
 </body>
 </html>
